Add shared Nightbreak release lifecycle and repair commands
Add reusable force-reinstall content handling, bounded updater lifecycle tracking, safer packet handling and regression coverage for shaded plugin consumers.